<resources>
    <string name="app_name">My Payme</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="verify_screen_info_text">The verification code was sent to the following number\n+998 91 *** ** 87</string>

    <!--RUSSIAN-->

    <!--check-->
    <string name="ru_check_service_point">Пункт обслуживания:</string>
    <string name="ru_check_terminal">Терминал:</string>
    <string name="ru_check_receiver_card">Карта получателя:</string>
    <string name="ru_check_receiver">Получатель:</string>
    <string name="ru_check_time_created">Время создания:</string>
    <string name="ru_check_time_payment">Время оплаты:</string>
    <string name="ru_check_sender_card">Карта:</string>
    <string name="ru_check_service_cost">Стоимость услуги:</string>
    <string name="ru_check_payment_cost">Сумма платежа:</string>
    <string name="ru_check_all">Всего:</string>
    <string name="ru_check_paid">Оплаченный</string>
    <string name="ru_check_all_transfers">Все трансферы</string>
    <string name="ru_check_no_notes">Нет заметок</string>

    <!--ads-->
    <string name="ru_ad1_title">Виртуальная карта Visa</string>
    <string name="ru_ad1_description">для онлайн покупок</string>
    <string name="ru_ad2_title">USSD *505#</string>
    <string name="ru_ad2_description">Оплаты и переводы\nбез интернета</string>
    <string name="ru_ad3_title">Оплата на\nрасчетный счет</string>
    <string name="ru_ad3_description">Оплачивайте прямо из дома</string>
    <string name="ru_ad4_title">Оплата штрафов ГУБДД</string>
    <string name="ru_ad4_description">Оплачивайте со скидкой\n30% в первые 15 дней</string>
    <string name="ru_ad5_title">Мой дом</string>
    <string name="ru_ad5_description">Коммунальные платежи\nв одном месте</string>
    <string name="ru_ad6_title">Откройте кошелек</string>
    <string name="ru_ad6_description">в одно мгновение</string>

    <!--transaction types-->
    <string name="ru_transaction_air">авиа</string>
    <string name="ru_transaction_auto">авто</string>
    <string name="ru_transaction_accessories">аксессуары</string>
    <string name="ru_transaction_rent">аренда</string>
    <string name="ru_transaction_conversion">конверсия</string>
    <string name="ru_transaction_credit">кредит</string>
    <string name="ru_transaction_shop">магазин</string>
    <string name="ru_transaction_rest">отдых</string>
    <string name="ru_transaction_taxi">такси</string>
    <string name="ru_transaction_transport">транспорт</string>
    <string name="ru_transaction_transfer">перевод</string>

    <!-- payment for services ru -->
    <string name="ru_payment_for_service_popular">Популярное</string>
    <string name="ru_payment_for_service_mobile_operators">Мобильные операторы</string>
    <string name="ru_payment_for_service_internet_providers">Интернет провайдеры</string>
    <string name="ru_payment_for_service_communal">Коммунальные услуги</string>
    <string name="ru_payment_for_service_government">Государственные услуги и штрафы ГАИ</string>
    <string name="ru_payment_for_service_telephone">Телефония</string>
    <string name="ru_payment_for_service_tv">Телевидение и онлайн вещание</string>
    <string name="ru_payment_for_service_online_service">Онлайн сервисы</string>
    <string name="ru_payment_for_service_poster">Объявления и реклама</string>
    <string name="ru_payment_for_service_bank">Погашение банковских кредитов</string>
    <string name="ru_payment_for_service_credit">Погашение кредитов и рассрочек</string>
    <string name="ru_payment_for_service_transport">Транспорт</string>
    <string name="ru_payment_for_service_charity">Благотворительность</string>
    <string name="ru_payment_for_service_education">Обучение</string>
    <string name="ru_payment_for_service_electronic_wallet">Электронные кошельки</string>
    <string name="ru_payment_for_service_insurance">Страхование</string>
    <string name="ru_payment_for_service_game_social_media">Игры и социальные сети</string>
    <string name="ru_payment_for_service_airplane">Авиа и ЖД билеты</string>

    <!-- payment for services en -->
    <string name="en_payment_for_service_popular">Popular</string>
    <string name="en_payment_for_service_mobile_operators">Mobile operators</string>
    <string name="en_payment_for_service_internet_providers">Internet providers</string>
    <string name="en_payment_for_service_communal">Public utilities</string>
    <string name="en_payment_for_service_government">Public services and traffic police fines</string>
    <string name="en_payment_for_service_telephone">Telephony</string>
    <string name="en_payment_for_service_tv">Television and online broadcasting</string>
    <string name="en_payment_for_service_online_service">Online services</string>
    <string name="en_payment_for_service_poster">Announcements and advertising</string>
    <string name="en_payment_for_service_bank">Repayment of bank loans</string>
    <string name="en_payment_for_service_credit">Repayment of loans and installments</string>
    <string name="en_payment_for_service_transport">Transport</string>
    <string name="en_payment_for_service_charity">Charity</string>
    <string name="en_payment_for_service_education">Education</string>
    <string name="en_payment_for_service_electronic_wallet">Electronic wallets</string>
    <string name="en_payment_for_service_insurance">Insurance</string>
    <string name="en_payment_for_service_game_social_media">Games and social networks</string>
    <string name="en_payment_for_service_airplane">Air and railway tickets</string>

    <!-- services ru-->
    <string name="ru_services_title_payme_avia">Payme Avia</string>
    <string name="ru_services_description_payme_avia">Покупка авиабилетов</string>
    <string name="ru_services_title_payment_for_checking_account">Оплата на расчётный счёт</string>
    <string name="ru_services_description_payment_for_checking_account"> </string>
    <string name="ru_services_title_iib_debt_checking">Проверка задолженности МИБ</string>
    <string name="ru_services_description_iib_debt_checking"> </string>
    <string name="ru_services_title_gold_crown">Золотая корона</string>
    <string name="ru_services_description_gold_crown">Получайте международные переводы прямо на карту</string>
    <string name="ru_services_title_payment_monitoring">Мониторинг платежей</string>
    <string name="ru_services_description_payment_monitoring">Enabled</string>
    <string name="ru_services_title_traffic_fine_notices">Уведомления о штрафах ГУБДД</string>
    <string name="ru_services_description_traffic_fine_notices">Disabled</string>
    <string name="ru_services_title_auto_insurance">Автострахование</string>
    <string name="ru_services_description_auto_insurance">Покупка Е-полиса обязательного автострахования</string>

    <!-- services en-->
    <string name="en_services_title_payme_avia">Payme Avia</string>
    <string name="en_services_description_payme_avia">Buying tickets</string>
    <string name="en_services_title_payment_for_checking_account">Payment to current account</string>
    <string name="en_services_description_payment_for_checking_account"> </string>
    <string name="en_services_title_iib_debt_checking">IIB debt check</string>
    <string name="en_services_description_iib_debt_checking"> </string>
    <string name="en_services_title_gold_crown">Gold Crown</string>
    <string name="en_services_description_gold_crown">Receive international transfers directly to your card</string>
    <string name="en_services_title_payment_monitoring">Payment monitoring</string>
    <string name="en_services_description_payment_monitoring">Enabled</string>
    <string name="en_services_title_traffic_fine_notices">Traffic fine notices</string>
    <string name="en_services_description_traffic_fine_notices">Disabled</string>
    <string name="en_services_title_auto_insurance">Auto insurance</string>
    <string name="en_services_description_auto_insurance">Buying an E-policy of compulsory auto insurance</string>

    <!--ENGLISH-->
    <string name="check_service_point">Service point:</string>
    <string name="check_terminal">Terminal:</string>
    <string name="check_receiver_card">Recipient\'s card:</string>
    <string name="check_receiver">Recipient:</string>
    <string name="check_time_created">Time of creation:</string>
    <string name="check_time_payment">Time of payment:</string>
    <string name="check_sender_card">Sender card:</string>
    <string name="check_service_cost">Service cost:</string>
    <string name="check_all">All:</string>
    <string name="check_payment_cost">Payment amount:</string>
    <string name="check_paid">Paid</string>
    <string name="check_all_transfers">All transfers</string>
    <string name="check_no_notes">No notes</string>

    <!-- Location Payments -->
    <string name="alert_text">You have to enable geolocation for correct operation of this section</string>
    <string name="location_c_space_name">C-SPACE</string>
    <string name="location_c_space_address">г. Ташкент, ул. Чуст 1</string>
    <string name="location_rukkola_name">RUKKOLA</string>
    <string name="location_rukkola_address">г. Ташкент, ул. Чуст 1</string>
    <string name="location_candy_dance_studio_name">Candy Dance Studio</string>
    <string name="location_candy_dance_studio_address">ул. Мирзо Улугбека 69</string>

    <string name="no_internet">Internet mavjud emas</string>
    <string name="error_login_phone_number_is_not_valid">kotlin.String telefon raqam emas</string>
    <string name="error_login_phone_number_not_available">Bunday foydalanuvchi mavjud emas</string>
    <string name="error_login_password_incorrect">Parol notog\'ri</string>
    <string name="error_register_phone_number_already_registered">Ushbu raqam allaqachon ro\'yxatdan o\'tgan</string>
    <string name="en_enable_face_id_description">Using Face ID is faster and more secure than a password</string>
    <string name="ru_enable_face_id_description">Использование Face ID быстрее и безопаснее, чем пароль</string>
    <string name="txt_successfully_paid_description">In case of late receipt of goods or services, contact the supplier\'s support service</string>

    <string name="en_payme_people_transactions_count_description">You have made 8 transactions this month and are entered into the prize draw!</string>
    <string name="ru_payme_people_transactions_count_description">Вы совершили 8 транзакций в этом месяце и участвуете в розыгрыше призов!</string>

    <string name="ru_error_payment_not_suitable_card">Не удалось найти подходящую комиссию для операции</string>
    <string name="en_error_payment_not_suitable_card">Failed to find a suitable commission for the operation</string>
    <string name="ru_error_payment_not_enough_money">У вас недостаточно денег!</string>
    <string name="en_error_payment_not_enough_money">You have not enough money!</string>

    <!-- Custom Dimensions -->
    <dimen name="radius_cards">12dp</dimen>
    <dimen name="viewpager_next_item_visible">26dp</dimen>
    <dimen name="viewpager_current_item_horizontal_margin">42dp</dimen>
    <dimen name="view_line_height">0.5dp</dimen>
</resources>
